Clean up SonarLint findings: string constants, pattern matching, dead code
Extracted repeated string literals (role names, error-message prefixes,
the OAuth intent cookie name, etc.) into named constants across
AuthService, ArtisanFormateurService, UserManagementService,
OAuth2AuthenticationSuccessHandler, EmailUtil, AuditLogService, and the
two exception classes with duplicated error codes.

SecurityUtils now uses pattern-matching instanceof instead of a
separate cast, and got a private constructor since it's static-only.
Two Stream.collect(Collectors.toList()) calls in AuthService became
Stream.toList() — checked both call sites first to confirm the results
are never mutated afterward. Removed two throws Exception declarations
in SecurityConfig that couldn't actually be thrown, and documented why
CSRF is disabled directly in that method's Javadoc. Removed a large
commented-out block in WebClientConfig, keeping the Phase 9 TODO note.